src/stylesheets/main.css
@import url('https://fonts.googleapis.com/css?family=Montserrat');

body{
  min-width:320px;
  width:100%;
  height:100%;
  margin:0;
  padding:0;
  overflow-x:hidden;
}

nav{
  position:fixed;
  width:100%;
  z-index:10000;
  -webkit-box-shadow: 1px 3px 25px -4px rgba(0,0,0,0.75);
  -moz-box-shadow: 1px 3px 25px -4px rgba(0,0,0,0.75);
  box-shadow: 1px 3px 25px -4px rgba(0,0,0,0.75);
}
.nav_container{
  background-color:#30415D;
  color:#F5f5f5;
  text-transform:uppercase;
  font-weight:bold;
  display:flex;
  justify-content:center;
  align-items:center;
  height:80px;
}
.nav_mobile,.mobile_menu{
  display:none;
}
.nav_title{
  text-align:left;
  font-size:1.5em;
  line-height:100%;
  width:50%;
  padding-left:3%;
}
.nav_links{
  text-align:right;
  width:50%;
  height:100%;
  display:flex;
  align-items:center;
  justify-content:space-around;
  padding-right:5%;
}
.nav_links span{
  font-size:1.3em;
  font-weight:bold;
  height:100%;
  display:flex;
  align-items:center;
  justify-content:center;
  width:30%;
  text-align:center;
  padding:0;
  margin:0;
  background-color:inherit;
}
.nav_links span a{
  color:inherit;
  width:100%;
  cursor:pointer;
}
.nav_links span a:hover, .nav_links span a:focus, .nav_links span a:active{
  color:#3273ad;
  text-decoration:none;
}
.header .container{
  height:100vh;
  width:100%;
  display:flex;
  align-items:center;
  justify-content:center;
  flex-direction:column;
  background-color:#B1463C;
}
.reveal{
  font-size:18px;
  text-align:left;
  display:block;
}
.main_title, .main_title h1{
  color:#F4DeCb;
  font-size:100px;
  font-family:Montserrat;
  padding:0;
  margin:0;
}
.main_title{
  margin:2% 0 0 0;
  display:flex;
  justify-content:center;
  flex-direction:column;
  color:#F4DeCb;
  font-size:100px;
  font-family:Montserrat;
  -webkit-box-shadow: 1px 3px 25px -4px rgba(0,0,0,0);
  -moz-box-shadow: 1px 3px 25px -4px rgba(0,0,0,0);
  box-shadow: 1px 3px 25px -4px rgba(0,0,0,0);
  padding:5%;
  transition:all 0.7s;
}
.reveal{
  opacity:0;
  margin-top:5%;
  margin-left:1%;
  display:block;
}
.reveal a{
  color:#30415d;
}
.main_title:hover,.main_title:focus,.main_title:active{
  -webkit-box-shadow: 1px 3px 25px -4px rgba(0,0,0,0.75);
  -moz-box-shadow: 1px 3px 25px -4px rgba(0,0,0,0.75);
  box-shadow: 1px 3px 25px -4px rgba(0,0,0,0.75);
  transition:all 0.7s;
}
.down_arrow{
    position:absolute;
    top:92vh;
    transition:top 0.3s;
    border-right: 10px solid;
    border-bottom: 10px solid;
    width: 35px;
    height: 35px;
    transform: rotate(45deg);
    cursor:pointer;
    color:#F4DeCb;
    font-size:100px;
    font-family:Montserrat;
    padding:0;
    margin:0;
    display:block;
    opacity:1 !important; /*override js effect for main_container in Header component*/
}
.down_arrow:hover{
  transition:top 0.3s;
  top:94vh;
}
.projects .container{
  min-width:100%;
  margin:0;
  padding:0;
}
.single{
  width: calc(100% * (1/3));
  display:inline-block;
  position:relative;
  margin:0;
  padding:0;
  user-select:none;
}

.single img{
  width:100%;
  height:100%;
}

.single .single_overlay{
  position:absolute;
  opacity:0;
  top:0px;
  left:0px;
  width:100%;
  height:100%;
  margin:0;
  padding:0;
  font-family:"Franklin Gothic Light";
}
.single .single_overlay:hover{
  opacity:1;
  -webkit-transition:opacity 0.35s;
  -moz-transition:opacity 0.35s;
  -o-transition:opacity 0.35s;
  -ms-transition:opacity 0.35s;
  transition:opacity 0.35s;
  background: rgba(0, 0, 0, .6);
  color:white;
}
.overlay_info{
  display:flex;
  justify-content:center;
  align-items:center;
  flex-direction:column;
  width:100%;
  height:100%;
  padding-bottom:5%;
}
.overlay_description{
  padding:2% 15% 2% 25%;
  font-size:16px;
  font-weight:normal;
}
.overlay_info a{
  display:inline-block;
  color:white;
  background-color:darkslateblue;
  border:none;
  margin:1%;
  width:25%;
  height:40px;
  text-align:center;
  line-height:40px;
  font-size:16px;
  text-decoration:none;

}
.overlay_info a:hover{
  transition:all 0.2s;
  background-color:white;
  color:slategrey;
}
.overlay_links{
  width:100%;
  display:flex;
  justify-content:center;
}
.TalaPrep_overlay .overlay_github{
  pointer-events:none;
  user-select:none;
}

.about{
  background-color:#B1463C;
  color:#F4DeCb;
  padding:6% 18% 6% 18%;

}
.about .container{
  width:100%;
}
.about h1{
  text-align:center;
  text-transform:uppercase;
  display:block;
  font-size:4vw;
  font-weight:bold;
  width:100%;
}

.about_description{
  display:block;
}

.about p{
  line-height:185%;
  font-size:2.2vw;
  margin-top:8%;
}

.about_skills{
  display:flex;
  justify-content:center;
  align-items:center;
  padding:0;
  padding-top:8%;
  width:80vw;
}
.about ul{
  width:calc(100%*(1/3));
  list-style-type:none;
  padding:0;
}
.about li{
  line-height:200%;
  font-size:1.5vw;
}
.about li h3{
  font-weight:bold;
  font-size:1.8vw;
}
.site_description{
  padding:4% 0 0 0;
  margin-bottom:-2%;
  font-size:1.2vw;
}
.footer .container{
  display:flex;
  justify-content:center;
  align-items:center;
}
.footer h2{
  text-align:center;
  text-transform:uppercase;
}
.footer h3{
  font-size:3vw;
  padding:8% 0 5% 0;
  width:100%;
  text-align:center;
}
.footer h3 span{
  padding:2%;
}
.footer h3 span:hover{
  box-shadow: inset 40vw 0 0 0 #18bc9c;
  transition:all 1s;
  color:white;
}
.contact_info{
  display:flex;
  justify-content:center;
  align-items:center;
  flex-direction:column;
  padding-bottom:10%;
}
.contact_info img{
  width:52px;
  height:52px;
}
.contact_info ul{
  display:flex;
  justify-content:space-around;
  width:100%;
  list-style-type:none;
  padding:0 10% 0 15%;

}
.contact_info li{
  display:inline-block;
  width:25%;
}

/*Scale down header title font*/
@media only screen and (max-width:1200px){
  .main_title h1{
    font-size:85px;
  }
  .overlay_description{
    padding:2% 5% 2% 10%;
    font-size:15px;
    font-weight:normal;
  }
  .site_description{
    font-size:15px;
  }
  .contact_info ul{
    padding:0 5% 0 5%;
  }
}
/* iPad Pro */
@media only screen and (max-width:1024px){

  .nav_title{
    font-size:1.3em;
  }
  .nav_links span{
    font-size:1em;
  }

  .single{
    width: calc(100% * (1/2));
    display:inline-block;
    position:relative;
    margin:0;
    padding:0;
  }
  .about p{
    font-size:2.8vw;
  }
  .about li{
    font-size:2vw;
  }
  .about li h3{
    font-size:2.5vw;
  }
  .footer h3{
    font-size:3.1vw;
  }
  .contact_info ul{
    padding:0 5% 0 5%;
  }

  .main_title h1{
    font-size:70px;
  }

}

@media only screen and (max-width:820px){
  .main_title h1{
    font-size:65px;
  }
}

/* iPad */
@media only screen and (max-width:768px){
  .nav_title{
    font-size:1.1em;
  }
  .nav_links span {
    font-size: 1em;
  }
  .main_title h1{
    font-size:60px;
  }
}
/* Change navigation menu*/
@media only screen and (max-width:767px){
  .single{
    display:block;
    width:100%;
  }
  .overlay_description{
    padding:2% 15% 2% 25%;
    font-size:15px;
    font-weight:normal;
  }
  .nav_container{
    display:flex;
    justify-content:center;
    align-items:center;
  }
  .nav_links{
    display:none;
  }
  .nav_title{
    display:inline-block;
    text-align:left;
    width:80%;
    padding:0px;

  }
  .mobile_menu{
    display:inline-block;
    width:5%;
    font-size:2.4em;
    transform:scale(1.8,1);
  }
  .nav_mobile{
    display:none;
    height:0px;
    width:100%;
    text-align:center;
    border-top:1px solid white;
    background-color:#2C3E50;
  }
  .nav_mobile span{
    display:none;
    height:40px;
    width:100%;
    cursor:pointer;
    line-height:40px;
  }
  .nav_mobile span:hover{
    background-color:#a9a5a4;
  }

  .nav_mobile span a{
    color:white;
    font-size:1.1em;
    text-transform:uppercase;
    font-weight:bold;
    text-decoration: none;
  }
  .site_description{
    font-size:0.95em;
  }
  .contact_info img{
    width:40px;
    height:40px;
  }
  .contact_info ul{
    padding:0 5% 0 5%;
  }


}

/* Nexus 5x/6p iPhone 6+ */
@media only screen and (max-width:480px){
  .contact_info img{
    width:32px;
    height:32px;
  }
  .contact_info ul{
    padding:0 5% 0 5%;
  }

  .overlay_description{
    padding:2% 5% 2% 15%;
    font-size:15px;
    font-weight:normal;
  }
  .about{
    padding:8%;
  }
  .about h1{
    font-size:5.5vw;
  }
  .about_skills{
    justify-content:left;
    flex-direction:column;
  }
  .about_skills ul {
    width: 100%;
  }
  .about_skills li{
    font-size:4vw;
  }
  .about li h3{
    font-size:5vw;
  }
  .about p {
    font-size: 4.5vw;
    padding: 0;
  }
  .mobile_menu{
    font-size:2.2em;
  }
  .nav_title{
    font-size:1.1em;
  }

  .main_title h1{
    font-size:40px;
  }
  .main_title{
    margin-top:25%;
  }
  .site_description{
    font-size:1em;
  }

}
/* iPhone 6 /Medium-sized phones*/
@media only screen and (max-width:375px){
  .contact_info img{
    width:30px;
    height:30px;
  }
  .contact_info ul{
    padding:0 10% 0 10%;
  }
  .about h1{
    font-size:7vw;
  }
  .about_skills li{
    font-size:4.5vw;
  }
  .about li h3{
    font-size:5.5vw;
  }
  .about p{
    font-size:5vw;
  }
  .footer h3{
    font-size:3.3vw;
  }
  .mobile_menu{
    font-size:2em;
  }
  .nav_title{
    font-size:1em;
  }

  .main_title h1{
    font-size:37px;
  }
  .main_title{
    margin-top:25%;
  }
  .reveal{
    font-size:15px;
  }
  .down_arrow{
    width:25px;
    height:25px;
  }

}
@media only screen and (max-width:360px){
  .footer h3{
    font-size:3.8vw;
  }
  .footer h3 span:hover{
    box-shadow: inset 45vw 0 0 0 #18bc9c;
    transition:all 1s;
    color:white;
  }

  .main_title h1{
    font-size:30px;
  }
  .main_title{
    margin-top:25%;
  }
  .reveal{
    font-size:13px;
  }
  .down_arrow{
    width:25px;
    height:25px;
  }

  .overlay_description{
    font-size:14px;
    padding:2% 5% 2% 15%;
    margin:0;
  }

  .overlay_description a{
    margin:0;
    padding:0;
  }

}

